anidb_client_core/include/anidb.h


typedef struct anidb_client_t* anidb_client_handle_t;
typedef enum {
    ANIDB_SUCCESS = 0,
    ANIDB_ERROR_INVALID_HANDLE = 1,
    ANIDB_ERROR_INVALID_PARAMETER = 2,
    ANIDB_ERROR_FILE_NOT_FOUND = 3,
    ANIDB_ERROR_PROCESSING = 4,
    ANIDB_ERROR_OUT_OF_MEMORY = 5,
    ANIDB_ERROR_IO = 6,
    ANIDB_ERROR_NETWORK = 7,
    ANIDB_ERROR_CANCELLED = 8,
    ANIDB_ERROR_INVALID_UTF8 = 9,
    ANIDB_ERROR_VERSION_MISMATCH = 10,
    ANIDB_ERROR_TIMEOUT = 11,
    ANIDB_ERROR_PERMISSION_DENIED = 12,
    ANIDB_ERROR_CACHE = 13,
    ANIDB_ERROR_BUSY = 14,
    ANIDB_ERROR_UNKNOWN = 99
} anidb_result_t;
typedef enum {
    ANIDB_HASH_ED2K = 1,
    ANIDB_HASH_CRC32 = 2,
    ANIDB_HASH_MD5 = 3,
    ANIDB_HASH_SHA1 = 4,
    ANIDB_HASH_TTH = 5
} anidb_hash_algorithm_t;
typedef enum {
    ANIDB_CALLBACK_PROGRESS = 1,
    ANIDB_CALLBACK_ERROR = 2,
    ANIDB_CALLBACK_COMPLETION = 3,
    ANIDB_CALLBACK_EVENT = 4
} anidb_callback_type_t;
typedef struct {
    anidb_event_type_t type;
    uint64_t timestamp;
    anidb_event_data_t data;
    const char* context;
} anidb_event_t;
typedef void (*anidb_event_callback_t)(
    const anidb_event_t* event,
    void* user_data
);
typedef struct {
    const char* cache_dir;
    size_t max_concurrent_files;
    size_t chunk_size;
    size_t max_memory_usage;
    int enable_debug_logging;
    const char* username;
    const char* password;
    const char* client_name;
    const char* client_version;
} anidb_config_t;
typedef struct {
    const anidb_hash_algorithm_t* algorithms;
    size_t algorithm_count;
    int enable_progress;
    int verify_existing;
    anidb_progress_callback_t progress_callback;
    void* user_data;
} anidb_process_options_t;
typedef struct {
    char* file_path;
    uint64_t file_size;
    anidb_status_t status;
    anidb_hash_result_t* hashes;
    size_t hash_count;
    uint64_t processing_time_ms;
    char* error_message;
} anidb_file_result_t;
typedef struct {
    uint64_t anime_id;
    uint64_t episode_id;
    char* title;
    uint32_t episode_number;
    double confidence;
    int source;
} anidb_anime_info_t;
typedef struct {
    size_t total_files;
    size_t successful_files;
    size_t failed_files;
    anidb_file_result_t* results;
    uint64_t total_time_ms;
} anidb_batch_result_t;
anidb_result_t anidb_init(uint32_t abi_version);
void anidb_cleanup(void);
const char* anidb_get_version(void);
uint32_t anidb_get_abi_version(void);
anidb_result_t anidb_client_create(anidb_client_handle_t* handle);
anidb_result_t anidb_client_create_with_config(
    const anidb_config_t* config,
    anidb_client_handle_t* handle
);
anidb_result_t anidb_client_destroy(anidb_client_handle_t handle);
anidb_result_t anidb_client_get_last_error(
    anidb_client_handle_t handle,
    char* buffer,
    size_t buffer_size
);
anidb_result_t anidb_process_file(
    anidb_client_handle_t handle,
    const char* file_path,
    const anidb_process_options_t* options,
    anidb_file_result_t** result
);
anidb_result_t anidb_calculate_hash(
    const char* file_path,
    anidb_hash_algorithm_t algorithm,
    char* hash_buffer,
    size_t buffer_size
);
anidb_result_t anidb_calculate_hash_buffer(
    const uint8_t* data,
    size_t data_size,
    anidb_hash_algorithm_t algorithm,
    char* hash_buffer,
    size_t buffer_size
);
anidb_result_t anidb_cache_clear(anidb_client_handle_t handle);
anidb_result_t anidb_cache_get_stats(
    anidb_client_handle_t handle,
    size_t* total_entries,
    uint64_t* cache_size_bytes
);
anidb_result_t anidb_cache_check_file(
    anidb_client_handle_t handle,
    const char* file_path,
    anidb_hash_algorithm_t algorithm,
    int* is_cached
);
anidb_result_t anidb_identify_file(
    anidb_client_handle_t handle,
    const char* ed2k_hash,
    uint64_t file_size,
    anidb_anime_info_t** info
);
void anidb_free_string(char* str);
void anidb_free_file_result(anidb_file_result_t* result);
void anidb_free_batch_result(anidb_batch_result_t* result);
void anidb_free_anime_info(anidb_anime_info_t* info);
uint64_t anidb_register_callback(
    anidb_client_handle_t handle,
    anidb_callback_type_t type,
    void* callback,
    void* user_data
);
anidb_result_t anidb_unregister_callback(
    anidb_client_handle_t handle,
    uint64_t callback_id
);
anidb_result_t anidb_event_connect(
    anidb_client_handle_t handle,
    anidb_event_callback_t callback,
    void* user_data
);
anidb_result_t anidb_event_disconnect(anidb_client_handle_t handle);
anidb_result_t anidb_event_poll(
    anidb_client_handle_t handle,
    anidb_event_t* events,
    size_t max_events,
    size_t* event_count
);
const char* anidb_error_string(anidb_result_t error);
const char* anidb_hash_algorithm_name(anidb_hash_algorithm_t algorithm);
size_t anidb_hash_buffer_size(anidb_hash_algorithm_t algorithm);